	- ADDED: Spline functions.
	- CHANGE: Raygui to version 4.0. Gui libs also updated.
	- ADDED: Support for platforms.
	- ADDED: Platform desktop SDL.
	- CHANGE: Renamed event enums. Events are now platform specific.
	- ADDED: SDL Events.
	- ADDED: Experimental GLFW Pen Touch events. Needs glfw PR https://github.com/glfw/glfw/pull/1445.
	- ADDED: Platform specific API documentation generation.

DETAILED CHANGES:
	- REMOVED: DrawLineBezierQuad, DrawLineBezierCubic.
	- REMOVED: GenImageGradientV, GenImageGradientH.
	- ADDED: GenImageGradientLinear and GenImageGradientSquare.
	- ADDED: LoadImageSvg and ExportImageToMemory.
	- ADDED: ImageRotate.
	- ADDED: SetTextLineSpacing.
	- ADDED: LoadSoundAlias and UnloadSoundAlias.
	- ADDED: GetApplicationDirectory.
	- FIXED: Snake example after Vector2Angle change.
	- FIXED: Raygui edit mode selection.
	- CHANGE: Moved glfw headers to GLFW folder.
	- CHANGE: Term globals changed to defines in documentation.
	- CHANGE: Event documentation is now described in c files.
	- ADDED: ExportBufferAsCode.

------------------------------------------------------------------------
Release:	ReiLua version 0.6.0		Using Raylib 4.5
------------------------------------------------------------------------
KEY CHANGES:
	- CHANGED: Switch from ID based objects to userdata.
	- CHANGED: Object unloading is handled by Lua garbage collection by default.
	- CHANGED: Rely mostly on luaL_check* functions for arg checking.
	- CHANGED: ModelAnimations are changed to separate ModelAnimation types as in Raylib.
	- ADDED: Userdata objects can be referenced with lightuserdata.
	- ADDED: GC_UNLOAD build time define for enabling/disabling Lua garbage collection for objects.
	Can be checked with IsGCUnloadEnabled
	- ADDED: Shaders management functions.
	- ADDED: Compute shader management and Buffer management.
	- ADDED: More RLGL Initialization functions.
	- ADDED: GlyphInfo type.
	- ADDED: DrawTextEx.
	- CHANGED: DrawText is now DrawTextEx like in Raylib.